--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRWV1kCN8yS8Tkc7ngdPyikPyuQk6y4rE&libraries=places"
+      async
+      defer
+    ></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
